--- a/Pre_LLM_Preformatter.ipynb
+++ b/Pre_LLM_Preformatter.ipynb
@@ -20,7 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Raw Text Pre-LLM Preformatter\n",
+        "#Pre-LLM Preformatter\n",
         "\n",
         "This code preformat raw ocr-result text by cleaning and appending word candidates to each token."
       ],
